deployments/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vault-strip
  namespace: vault
spec:
  stripPrefix:
    prefixes:
      - /v1/vault
