deployments/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: dallasformularacing/vault:6553adb9b1c11e4fe193e67319e437315a3d4ed4
        ports:
        - containerPort: 8080
