deployments/route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-svc
  namespace: default
spec:
  rules:
    - host: "vault.dallasformularacing.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 80
